--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -12433,7 +12433,24 @@ https://www.kkbox.com/hk/tc/song/Sp1_JO-s1sYnr_Ax3m
 
 
 
-407、Let this be my last word, that I trust in thy love.
+407、我报名参加了一杯咖啡举行的星期一心理研修系列之“中年之路活出自我”活动。
+
+☑ 第4次：2025年12月1日周一晚上21点30，使用平台：腾讯会议。活动开始前5分钟提供会议号。
+---
+
+☑ 第4次的研讨主题围绕《中年之路》1展开，范围涵盖：71-116页有关内容（工作、事业等）。可提前阅读，但不阅读也不影响学习，老师会根据大家的平均水平分享。如果觉得书上内容太专业的部分，可略过不计。
+---
+
+☑ 活动形式：老师分享、交流互动，请有意愿参与现场交流的伙伴，做好交流发言的环境和声音设备准备。
+---
+
+☑ 本活动提供限时回放。
+
+主讲陈鼎老师说我们可能需要转念，想爱的人得不到不一定要等她/他一辈子，有时候该结束就结束，轻轻地放下就行，人生苦短，把握当下，成为你自己，你本来就很好，生活，本应甜如蜜。
+
+
+
+408、Let this be my last word, that I trust in thy love.
 
 “我相信你的爱，”让这句话做我的最后的话。
 
@@ -12459,7 +12476,7 @@ https://www.kkbox.com/hk/tc/song/Sp1_JO-s1sYnr_Ax3m
 
 logging  
 
-202511291054 创作者YJH 完成终极版
+202512012206 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
