--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -12450,7 +12450,54 @@ https://www.kkbox.com/hk/tc/song/Sp1_JO-s1sYnr_Ax3m
 
 
 
-408、Let this be my last word, that I trust in thy love.
+408、我报名参加了一杯咖啡举行的星期一心理研修系列之“中年之路活出自我”活动。
+
+☑ 第5次：2025年12月1日周一晚上21点30，使用平台：腾讯会议。活动开始前5分钟提供会议号。
+---
+
+☑ 第4次的研讨主题围绕《中年之路》1展开，范围涵盖：71-116页有关内容（工作、事业等）。可提前阅读，但不阅读也不影响学习，老师会根据大家的平均水平分享。如果觉得书上内容太专业的部分，可略过不计。
+---
+
+☑ 活动形式：老师分享、交流互动，请有意愿参与现场交流的伙伴，做好交流发言的环境和声音设备准备。
+---
+
+☑ 本活动提供限时回放。
+
+主讲陈鼎老师说：
+
+还记得金三顺吗？去爱吧，就像不曾受过伤一样～ 
+
+一首诗： 《去爱吧，像不曾受过伤一样》——艾佛列德·德索萨 
+
+Love like you've never been hurt. 
+
+Dance like nobody's watching. 
+
+Sing like nobody's listening. 
+
+Work like you don't need the money . 
+
+Live like it's heaven on earth. 
+
+Assume today is the last day you live. 
+
+——Alfred D’Souza 
+
+面对爱情失利、工作变故、生活不顺时，别害怕，要向金三顺那样往前走：
+
+去爱吧，就像没有受过伤一样；
+
+唱歌吧，就像没有人聆听一样；
+
+跳舞吧，就像没有人注视一样；
+
+工作吧，就像不需要金钱一样；
+
+生活吧，就像今天是世界末日一样。
+
+
+
+409、Let this be my last word, that I trust in thy love.
 
 “我相信你的爱，”让这句话做我的最后的话。
 
@@ -12476,7 +12523,7 @@ https://www.kkbox.com/hk/tc/song/Sp1_JO-s1sYnr_Ax3m
 
 logging  
 
-202512012206 创作者YJH 完成终极版
+202512091456 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
