--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -12601,11 +12601,95 @@ AI和人类：“创造一个自己的世界，成为一个自己应该成为的
 
 
 
-415、谢谢你，让我活得更明白。
+415、[彭玉麟：一生知己是梅花--文史--中国作家网] https://www.chinawriter.com.cn/n1/2018/0913/c404063-30289834.html
+
+“生平最薄封侯愿，愿与梅花过一生。”彭玉麟说到做到，矢志不渝，为浊世开清流，果然是世间铁血痴情的奇男子。
 
 
 
-416、女孩，我们的夏天，永远不会结束。
+416、[科研对郭襄的拯救] https://mp.weixin.qq.com/s/ypnYd-3UJ282IE-A2akDQA
+
+- [人性之美，莫过于诚；人性之贵，莫过于信！] https://mp.weixin.qq.com/mp/appmsg/show?__biz=MjM5ODQ5NDczNA==&appmsgid=10000224&itemidx=1&sign=e61f55477b07a6580fd72b74d8f3517d&mpshare=1&scene=1&srcid=1221V3yMR7rF6qkj0oOlDHO0&sharer_shareinfo=c4dba835b845c9a88e8d407664079969&sharer_shareinfo_first=c4dba835b845c9a88e8d407664079969&poc_token=HC3nR2mjpdhOV-ceFxkfqZXNxPC56di5j_27YRUw
+
+  - 其实痛苦并不是别人带给你的，而是你自己的修养不够，学会放下，别让自己活得太累。
+
+    女人——不一定好看，但在你的眼里要耐看；
+
+    不一定懂很多道理，但争论时要能和你讲道理；
+
+    不一定纯洁无瑕，但不能水性杨花；
+
+    不一定挣很多钱，但能知道为你省钱；
+
+    不一定能走进你的思想里，但要能走进你的情感里；
+
+    不一定爱你死去活来，但要能让你变得更精彩；
+
+    不一定能为你争面子，但要能和你过日子。
+
+- [张兆和&沈从文：爱到终点始知味] https://mp.weixin.qq.com/s/zTD5W69os2o0TXgs9rYftg
+
+- [王珣：爱情的魔鬼定律] https://mp.weixin.qq.com/s/F95d8MGK3BDKVlh26hjSrw
+
+- [怎么确定自己是不是真的恋爱了?] https://mp.weixin.qq.com/s/0tZ0pLjviGy4it1CIISu-w
+
+- [你的伴侣是你创造出来的] https://mp.weixin.qq.com/s/xm24JuedNoURdkg69IJCHg
+
+- [失恋了，该怎么办？] https://mp.weixin.qq.com/s/L4bPLu6DCJLvFtwzp29pgg
+
+- [走出失恋的正确方法] https://mp.weixin.qq.com/s/O8hkhfbZCugLcmkOLljEIw?scene=1&click_id=61
+
+- [从心理学角度告诉你失恋后的伤心期限] https://mp.weixin.qq.com/s/yaT-1Q4sSXfzF1S4UkAXBw
+
+- [你的失恋和世界比起来，真的太渺小了] https://mp.weixin.qq.com/s/6WP6QWDPr4ampSBy9FrQkg
+
+
+
+417、谢谢你，让我活得更明白。
+
+
+
+418、女孩，我们的夏天，永远不会结束。
+
+
+
+419、[黄诗扶 - 来都来了——“才懂了人间滋味的模样” - YouTube] https://www.youtube.com/watch?v=Wg9G_X_DKC4
+
+
+
+420、[晚晴集講記 (豆瓣)] https://book.douban.com/subject/3101193/
+
+作者：弘一法师/弘一出版社：佛陀教育基金会
+
+
+
+版权归作者所有，任何形式转载请联系作者。
+作者：Babyfacer（来自豆瓣）
+来源：https://book.douban.com/review/3547068/
+
+只“强顺人情，勉就世故。”八个字，误却你一生大事。道业未成，无常至速！急宜敛迹韬光，一心向道，不得再误！（西方确指）
+      
+
+不可背负太重的人情世故包袱。
+
+
+
+#天地不可一日无和气，人心不可一日无喜神。 ... 
+
+译文
+
+天地之间不可一日没有和气，人的内心不可一日没有喜神。
+
+
+
+421、芒格：跟你们分享一下我的长寿秘诀，不要对人性期望过高，人性肯定会有很多缺陷和问题，如果让你的生活满怀怨恨，这会适得其反，你在惩罚自己，而不是改变世界，你能想到比这更蠢的事吗，把自己毁了，世界该怎样还是怎样，这很愚蠢。
+
+
+
+422、- [重读乔布斯10条独特思维：记住你即将死去] https://mp.weixin.qq.com/s/SKwN6uf6xAPcVEhk0hUHtg
+
+17岁那年，他读到过这样一段话，大意是:“如果把每一天都当作生命的最后一天，总有一天你会如愿以偿。”
+他记住了这句话，从那时起，33年过去了，他每天早晨都对著镜子自问: “假如今天是生命的最后一天，我还会去做今天要做的事吗?”一连许多天的回答都是“不”，他知道自己应该有所改变了。
 
 
 
@@ -12627,7 +12711,7 @@ AI和人类：“创造一个自己的世界，成为一个自己应该成为的
 
 logging  
 
-202512172118 创作者YJH 完成终极版
+202512212047 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
