--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -12699,6 +12699,49 @@ AI和人类：“创造一个自己的世界，成为一个自己应该成为的
 
 
 
+424、- [孫燕姿 Sun Yan Zi – 我很愉快 (Official Music Video) - YouTube] https://www.youtube.com/watch?v=CFxkH0AK3jg
+
+爱情不过是一种疯。——莎士比亚
+
+
+
+得到APP 吴军 《硅谷来信2》
+
+《第十二夜》——莎士比亚所描写的单恋
+
+吴军
+
+《第十二夜》（Twelfth Night ，也叫做 What You Will，译作《随心所欲》）。我第一次读这部喜剧很奇怪为什么它叫这个名字，因为剧中的情节并非什么重大事件之后第十二天晚上的故事，而是一个颇为浪漫，又有点荒诞的轻松喜剧。后来了解了英国的一些传统之后，我才知道西方早期过圣诞节通常会过12天，就如同中国春节要过到正月十五一样。这第十二天（来年的一月六号），也就是最后一天，被称为主显节（Epiphany）。到了莎士比亚生活的年代，即伊丽莎白一世时期，英国的主显节已经演变成狂欢作乐的日子，正如同我们中国正月十五闹元宵一样。在这种氛围下演戏，就不要求剧的情节那么符合逻辑，那么合理，可以表现一个脱离现实的嘉年华世界，在剧中，允许任何离奇的事情发生，以及各种不合常理的结局出现。这样就给剧作家一个空间，让他们不受现实真实性的约束，随意表达自己的想法，传达自己的思想。莎士比亚的《第十二夜》就是在这样的氛围下完成的，也是为它服务的。《第十二夜》的剧情今天看来有些俗套。它讲的是一对失散多年的孪生兄妹，两个贵族男女之间的爱情故事。剧情大致是这样的：薇奥拉（Viola）和塞巴斯蒂安（朱生豪翻译成“西巴斯辛”，Sebastian）是一对孪生兄妹，两人长得很像，却在一次船难中失散了，两人都以为对方已经在船难中丧生。薇奥拉为了谋生，就女扮男装，自称西萨里奥（Cesario），到伊利里亚的奥西诺公爵的门下充当仆人。奥西诺公爵爱上了伯爵小姐奥丽维娅（Olivia），就让薇奥拉去替他给伯爵小姐送信。不过，伯爵小姐奥丽维娅并不爱公爵，而看上了女扮男装长相俊美的薇奥拉。用今天的话讲，薇奥拉的样子一定很“小鲜肉”。当然，身为女儿身的薇奥拉明确地拒绝了。薇奥拉自己暗恋上公爵，但是因为扮作了男儿身，无法让公爵爱上自己，也很苦恼。话分两头，薇奥拉的哥哥塞巴斯蒂安被海盗船长安东尼奥所救，两人结为了兄弟，这一天也来到了伊利里亚。由于安东尼奥是海盗，不敢和塞巴斯蒂安一同逛城，因此便暂时分开各自行动了。再说伯爵小姐奥丽维娅那边，一方面她迷上了薇奥拉，另一方面她贪财的叔父想将她许配给愚蠢的暴发户安德鲁。得不到芳心的安德鲁就跑去和薇奥拉决斗，正好让海盗船长安东尼奥撞见，后者把女扮男装的薇奥拉当成了塞巴斯蒂安，自然不会袖手旁观，跑去帮助薇奥拉打架，结果被当地的警察认出来逮捕了。薇奥拉并不认识安东尼奥，对他的被捕无动于衷，这让后者觉得她背信弃义，大为光火。再说塞巴斯蒂安在城里逛，遇到了安德鲁，后者又来决斗，被赶来的奥丽维娅所制止。奥丽维娅错把塞巴斯蒂安当成薇奥拉，向他表示了爱情，塞巴斯蒂安对她也是一见钟情，俩人结下百年之好。最后，塞巴斯蒂安和薇奥拉兄妹重逢，奥丽维娅与塞巴斯蒂安结婚，而奥西诺公爵也察觉到薇奥拉对自己的爱情，并为薇奥拉的品貌所动，有情人也终成眷属。当然，海盗船长安东尼奥也被赦免了。《第十二夜》是一部极为轻松的喜剧，里面因为故事的主角薇奥拉隐藏了自己的身份，而引出许多笑话。为了添加喜剧的氛围，莎士比亚增加了不少次要的情节和角色，他们的任务就是通过行为和语言，增添喜剧效果。由于在狂欢日子里上演的话剧不必真实，甚至不必合乎逻辑，就给了莎士比亚表达自己思想的空间。这让这部剧成为了莎士比亚最优秀的喜剧之一，20世纪的批评家们甚至认为这是莎士比亚喜剧的巅峰之作。剧中的主人公是薇奥拉，她让人想起《威尼斯商人》（我们去年介绍的剧目）中的鲍西娅。薇奥拉美貌、聪明而独立，虽然是一位少女，却能把自己的命运掌握在自己手上。很多批评家们认为薇奥拉是一位爱情的教育者，她教会了奥丽维娅伯爵小姐和奥西诺公爵如何去爱。剧中另一位女主角奥丽维娅心地善良，用情专一。她拒绝了位高权重的公爵，却倾心于一位仆人（女扮男装的薇奥拉），这反映出在当时的英国，女性的地位已经开始提高，而且平等的意识已经开始深入城市居民。作为人文主义的代表作家，莎士比亚构想出一个充满了美好爱情生活的世界，那里有纯洁的爱情和友谊。全剧一开始，莎士比亚就借落入情网的公爵之口，用一段14行诗格式的独白，表达了对爱情的渴望，以及爱情的捉摸不定。那段独白是这样说的：假如音乐是爱情的食粮，那么奏下去吧；尽量地奏下去，好让爱情因过饱噎塞而死。又奏起这个调子来了！它有一种渐渐消沉下去的节奏。啊！它经过我的耳畔，就像微风吹拂一丛紫罗兰，发出轻柔的声音，一面把花香偷走，一面又把花香分送。够了！别再奏下去了！它现在已经不像原来那样甜蜜了。爱情的精灵呀！你是多么敏感而活泼；虽然你有海一样的容量，可是无论怎样高贵超越的事物一进了你的范围，便会在顷刻间失去了它的价值。爱情是这样充满了意象，在一切事物中是最富于幻想的。《第十二夜》中写了很多单恋，比如女主角薇奥拉对公爵的单恋，公爵对奥丽维娅的单恋，后者对薇奥拉的单恋。这种循环套单恋的情节在莎士比亚剧中非常常见，比如他的另一部喜剧《仲夏夜之梦》就重现了这种情景。此外，在他的悲剧《哈姆雷特》、《奥赛罗》中，以及喜剧《维洛那二绅士》中，都有单恋的情节。可见在莎士比亚看来，单相思对很多青年人来讲是难免的。在《第十二夜》中，连环套的单恋因为薇奥拉孪生哥哥塞巴斯蒂安的出现便解了套。但是在生活中，单恋的人常常就没有那么幸运了。在莎士比亚的笔下，那些单恋的人，有的因为爱情变得高尚纯粹，有的则变得卑鄙。但是他从来不认为争夺爱情能成为一些人自私和损害他人的借口，这一点是非常明确的。如果读多了莎士比亚的作品，就会发现他是一个理解爱情的高手。文学家在创作上有三个层次。第一个层次是编一个吸引人的故事，今天大家喜欢读的很多畅销小说都属于这一类。并非每一种文学读物都要有深刻的思想。比如《指环王》，琼瑶的小说，阿加莎·克里斯蒂的小说。第二个层次是反映出一个时代的特点和问题。我在之前推荐的一些小说，比如《平凡的世界》、《了不起的盖茨比》、以及德莱赛的《嘉莉妹妹》、海明威的《丧钟为谁而鸣》，此外还包括鲁迅的一些小说，张爱玲的一些小说，贾平凹的小说，以及法国大量批判现实主义作品，都是如此。这里面有通俗的，有相对严肃一点的，它们并非每一个人都爱读。第三个层次，则是通过对现实和一个时代的描写，阐述作者自己心中的春秋大义。比如托尔斯泰的《复活》、雨果的《悲惨世界》和《九三年》，以及曹雪芹的《红楼梦》。莎士比亚的很多作品就属于第三个层次。他通过作品，传递出他心中的春秋大义。从第一个层次上升到第二个层次，是对一种客观性的总结，那些作品让我们理解社会；而从第二个层次上升到第三个层次，则是用作者的主观性对人性客观性的总结，这一点尤其难，那些作品则让我们理解人生。如果你读过《史记》，就能体会太史公其实在他客观论述的背后，将他的好恶和价值取向表达得一清二楚。思考题：能否列一个你今年打算读的文学作品的书单，分享给大家？如果能说说原因就更好了。祝 新年愉快！
+
+
+
+如果说莎士比亚的悲剧
+
+让我们看清人性的暗面，
+那他的喜剧，
+
+则让我们在笑声中照见自己——
+尤其是这部《第十二夜》，
+堪称一场“身份错位”与
+
+“爱情幻觉”的盛大狂欢。
+
+**多少人这一生，**
+
+**爱上的不过是一个想象中的人？
+
+**而莎士比亚在四百年前就已写下答案：
+
+“爱情，本就是一场伟大的错觉。”
+
+
+
+行到水穷处，坐看云起时。
+
+但应此心无所住，造物虽驶如余何。
+
+
+
 终
 
 
@@ -12717,7 +12760,7 @@ AI和人类：“创造一个自己的世界，成为一个自己应该成为的
 
 logging  
 
-202512222036 创作者YJH 完成终极版
+202512231922 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
