--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -12762,6 +12762,47 @@ AI和人类：“创造一个自己的世界，成为一个自己应该成为的
 
 
 
+425、信 https://mp.weixin.qq.com/s/iFx4KgOWdsgOa9sQsrjZfA
+
+来自 公众号 黎戈
+
+原创 黎戈 
+
+ *2024年2月20日 09:34* *江苏*
+
+《千江有水千江月》这本书，有种复古气息，不仅是文字的半文白，而且还在于它的抒情道具，比如大信和贞观之间，是用书信相交的——每个人都活在无污染，非常环保的绿色田园诗情中：江枫渔火、濯濯莲花里，姐妹聊着床头心事；淡然举箫，眉黛轻蹙中，情侣互传诗句；爱情的触媒，也就是少时一个轻挑的鱼刺，隔着窗户纸，彼此都不挑破的几句边缘调情，即便对方是“泱泱君子，堂堂相貌”的意中人，也要发乎情，止乎礼，男有信而女有贞，不重肉体的亲爱，更重心契。看这两男女用古代戏剧里才有的文艺腔对白互传尺牍 ，我有几分不耐，恶作剧的暗想，如果给他们配上因特网，QQ，MSN，视频，手机短信，是不是这段情早就抵达彼岸，灰飞烟灭了？
+
+ 
+
+慢一点，再慢一点，现代人，缺乏的其实就是这种慢生活，一切都来得太快键，也太易挥发。就像床是肉体的欢愉地一样，尺牍实乃精神恋爱的必备品。古人鱼雁传书，纸短情长，回味和咀嚼的余时余地都大的多，人的心，也是山高水长，悠悠不已。甚至，信也可以不着一事，即满纸春色，请少纳言的书里写“ 在月光非常明亮的晚上，极其鲜明的红色的纸上面，只写着“并无别事”，叫使者送来，放在廊下，映着月光看时，实在觉得很有趣味。”——也没啥具体的念想，就是姑娘你像一艘月夜的小船，时隐时现，一直在我心里荡出波纹啊。
+
+ 
+
+信不一定是纸媒，也可以是实物。《古诗源》每每看的我落泪：“庭中有奇树，绿叶发华滋，馨香满怀袖，路远莫致之。此物何足贵，但感别经年”。连树叶都青黄几回了，心里惦念的人，却再也看不到了。《枕草子》里写：“黎明的时候忽而看见了男人所忘在枕边的笛子，也是很有意思的。等他后来差人来取，包了给他，简直是同普通的一封信一样。” 心意抵达既可，无需浪费笔墨。
+
+ 
+
+信来自不知名的时空，具有某种神秘性。卡夫卡临终前，认识了一个小姑娘，小姑娘丢了心爱的布娃娃，痛哭流涕，卡夫卡决定拟作信札一叠，叫做“洋娃娃来信”，不时告知小姑娘洋娃娃在路上的奇遇，卡夫卡费尽心思，写了很多洋娃娃的路遇，最后还让洋娃娃嫁了人，并细细描她的生活近况，这时，小姑娘已经从失去玩偶的痛楚中解脱出来了——这是奥斯特讲的一个故事，我并不知其是戏说还是真事，但是里面有神谕的感觉，就是”一旦活在故事性之中，就可以抵御现实”。
+
+ 
+
+信也可以是自斟和独舞。亦舒小说《心扉的信》里，小女孩长于单亲家庭，自小被卖作商人妾，但是一个叫心扉的女孩子，一直给她写信，鼓励她自强上进，笑对生活，之后她果然摆脱商贾，自立嫁人，修得善果。后来她丈夫去寻找心扉，感谢她对妻子的激励，才发现，所有这些信，都是孤绝的妻子，自己写给自己，用以自励的，他潸然泪下，倍感对妻子的怜爱。其实这些信真没啥，倒是这个丈夫，无视妻子身世的霉斑，不清白，对之爱若珍宝，实属难得。有些自语的信，是写给记忆的。席慕容的诗，有一首到现在还记得“我在长长的夜里给你写信，然后在清晨，把与你有关的每一个字删掉”。席的诗里，总是有个旧人的影子，“我终于明白，这人世间的每一条路，我都不能与你同行”。中年女子，在镜子前，梳理初白的发，想着这些缘起缘灭，怕也是满腹唏嘘。
+
+ 
+
+信总是写给最贴心的人——萨伊德的《格格不入》里提到,年过半百的他，在知道自己患了白血病后，立刻坐下来给母亲写信，写了半页后，才醒悟到母亲已经不在人世。最虚弱的时候，都想依傍母爱的。更伤怀的还有，韩素英的自传里，她在新加坡，收到男友在朝鲜阵亡的电报，但他的情书还在缓慢地依次到达。“此身不再情常在”。睹物伤人，莫过于此。最深情的绝情信，应该是龙女给杨过的断崖诗吧。手写信的时代真是令人怀恋，经典怀旧片《玻璃之城》里，舒淇把旧信一封封投进当年的信箱里，也收获了旧爱黎明。这两个人的重燃，也就和这些信一样，更是一种对纯真年代的缅怀吧。
+
+
+所谓尺牍，原是不拟发表的私书，文章也是寥寥数句，或诉情愫，或叙事实，好的尺牍要说真话，不造作。尺牍一旦有了着意的矜持，或拟定要发表，就有廉价的表演性。我很喜欢周作人的尺牍。他精读宋人小品文，深得其中神韵。谈文、搜书、聚宴、饮酒、赏花、制笺、写字、撰联等等，素雅悠闲，情趣盎然，是典型的旧氏文人的审美观。周坚持不谈正事，“办理公务，或雌黄人物者悉不录”，因为这些信是要发表的，涉及褒贬人物，则有违宽柔敦厚。倒是他晚年致曹聚仁、鲍耀明的信，因是“不拟发表”，是故能放言述之，或叙生活之窘迫，或藏否人物，显示了周作人性格中更为真实的一面。
+
+
+
+摘录其中一段：慢一点，再慢一点，现代人，缺乏的其实就是这种慢生活，一切都来得太快键，也太易挥发。就像床是肉体的欢愉地一样，尺牍实乃精神恋爱的必备品。古人鱼雁传书，纸短情长，回味和咀嚼的余时余地都大的多，人的心，也是山高水长，悠悠不已。甚至，信也可以不着一事，即满纸春色，请少纳言的书里写“  在月光非常明亮的晚上，极其鲜明的红色的纸上面，只写着“并无别事”，叫使者送来，放在廊下，映着月光看时，实在觉得很有趣味。”——也没啥具体的念想，就是姑娘你像一艘月夜的小船，时隐时现，一直在我心里荡出波纹啊。
+
+via 黎戈
+
+
+
 终
 
 
