--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -12803,6 +12803,31 @@ via 黎戈
 
 
 
+426、青玉案：失恋者的千年共鸣
+贺铸经典词作《凌波不过横塘路》全解析，看宋代词人如何道尽擦肩而过的怅惘
+
+《青玉案 · 凌波不过横塘路》北宋 · 贺铸
+
+凌波不过横塘路，但目送、芳尘去。
+
+锦瑟华年谁与度？月桥花院，琐窗朱户，只有春知处。
+
+飞云冉冉蘅皋暮，彩笔新题断肠句。
+
+试问闲情都几许？一川烟草，满城风絮，梅子黄时雨。
+
+这是贺铸的传世之作。一个曼妙的身影走过我的门口，她没有停留，我只能看着她的背影离去。
+
+她会和谁度过华美的一生呢？只有春知道罢。
+
+日色将暮，天上云卷云舒，我提起笔来，写下断肠的诗句，要问我的闲愁有多少？就像满川的烟草，满城的飞絮，梅雨时节的雨吧！“
+
+一川烟草，满城风絮，梅子黄时雨。”成为传世的名句，那无形的愁绪在贺铸笔下化为有形的模样，让人可触，由此，贺铸得名“贺梅子”。
+
+- [贺铸最经典的10首宋词（珍藏版）] https://mp.weixin.qq.com/s/kPA-SVI6DaGbpTia8im-BA
+
+
+
 终
 
 
@@ -12821,7 +12846,7 @@ via 黎戈
 
 logging  
 
-202512231942 创作者YJH 完成终极版
+202512232258 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
