--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -12828,6 +12828,42 @@ via 黎戈
 
 
 
+427、- [兰亭集序原文、翻译及赏析、拼音版及朗读\\_王羲之文言文\\_古文岛\\_原古诗文网] https://www.guwendao.net/shiwenv_af279f0cdd95.aspx
+
+# 兰亭集序
+
+[王羲之](https://www.guwendao.net/authorv_454d6e3e96ce.aspx)[〔魏晋〕](https://www.guwendao.net/shiwens/default.aspx?cstr=魏晋)
+
+　　永和九年，岁在癸丑，暮春之初，会于会稽山阴之兰亭，修禊事也。群贤毕至，少长咸集。此地有崇山峻岭，茂林修竹；又有清流激湍，映带左右，引以为流觞曲水，列坐其次。虽无丝竹管弦之盛，一觞一咏，亦足以畅叙幽情。
+
+　　是日也，天朗气清，惠风和畅。仰观宇宙之大，俯察品类之盛，所以游目骋怀，足以极视听之娱，信可乐也。
+
+　　夫人之相与，俯仰一世，或取诸怀抱，悟言一室之内；或因寄所托，放浪形骸之外。虽趣舍万殊，静躁不同，当其欣于所遇，暂得于己，快然自足，不知老之将至。及其所之既倦，情随事迁，感慨系之矣。向之所欣，俯仰之间，已为陈迹，犹不能不以之兴怀。况修短随化，终期于尽。古人云：“死生亦大矣。”岂不痛哉！(悟 一作：晤；趣 一作：曲；快 一作：怏)
+
+　　每览昔人兴感之由，若合一契，未尝不临文嗟悼，不能喻之于怀。固知一死生为虚诞，齐彭殇为妄作。后之视今，亦犹今之视昔，悲夫！故列叙时人，录其所述，虽世殊事异，所以兴怀，其致一也。后之览者，亦将有感于斯文。
+
+**译文
+
+**　　永和九年，时在癸丑之年，三月上旬，我们会集在会稽郡山阴城的兰亭，为了做禊礼这件事。诸多贤士能人都汇聚到这里，年长、年少者都聚集在这里。兰亭这个地方有高峻的山峰，茂盛高密的树林和竹丛；又有清澈激荡的水流，在亭子的左右辉映环绕，我们把水引来作为漂传酒杯的环形渠水，排列坐在曲水旁边，虽然没有管弦齐奏的盛况，但喝着酒作着诗，也足够来畅快表达幽深内藏的感情了。
+
+　　这一天，天气晴朗，和风习习，抬头纵观广阔的天空，俯看观察大地上繁多的万物，用来舒展眼力，开阔胸怀，足够来极尽视听的欢娱，实在很快乐。
+
+　　人与人相互交往，很快便度过一生，有的人在室内畅谈自己的胸怀抱负；有的人就着自己所爱好的事物，寄托自己的情怀，不受约束，放纵无羁的生活。虽然各有各的爱好，安静与躁动各不相同，但当他们对所接触的事物感到高兴时，一时感到自得，感到高兴和满足，不知道衰老将要到来。等到对于自己所喜爱的事物感到厌倦，心情随着当前的境况而变化，感慨随之产生了。过去所喜欢的东西，转瞬间，已经成为旧迹，尚且不能不因为它引发心中的感触，况且寿命长短，听凭造化，最后归结于消灭。古人说：“死生毕竟是件大事啊。”怎么能不让人悲痛呢？
+
+　　每当我看到前人兴怀感慨的原因，与我所感叹的好像符契一样相合，没有不面对着他们的文章而嗟叹感伤的，在心里又不能清楚地说明。本来知道把生死等同的说法是不真实的，把长寿和短命等同起来的说法是妄造的。后人看待今人，也就像今人看待前人。可悲呀！所以一个一个记下当时与会的人，录下他们所作的诗篇。纵使时代变了，事情不同了，但触发人们情怀的原因，他们的思想情趣是一样的。后世的读者，也将对这次集会的诗文有所感慨。
+
+
+
+428、(灵感来自周杰伦《七里香》歌词 把永远爱你写进诗的结尾 你是我唯一想要的了解)
+
+我的小说的最后一页如下：
+
+诗的结尾
+
+瑜（我的藏书印 西泠印泥）
+
+
+
 终
 
 
@@ -12846,7 +12882,7 @@ via 黎戈
 
 logging  
 
-202512232258 创作者YJH 完成终极版
+202512241307 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
