--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -13119,7 +13119,81 @@ https://mp.weixin.qq.com/s/TRGKhAYxc-eoL9Mymp9F3g
 
 
 
-433、(灵感来自周杰伦《七里香》歌词 把永远爱你写进诗的结尾 你是我唯一想要的了解)
+433、- [【心理导图】让你深度迷恋一个人的底层逻辑是什么？] https://mp.weixin.qq.com/s/HyR6pafgh4T5cjR8F5L1Uw
+
+没有无缘无故的迷恋「可以理解成上瘾」，我们对一个人产生疯狂的迷恋一定是这个人满足了我的需求。
+
+.
+
+在意识层面和潜意识层面我们分别有一个「理想型伴侣」和「现实性伴侣」，这两个伴侣模型都跟我们的原生家庭，跟我们的异性抚养着有密切联系。
+
+迷恋通常因为我们会被某个人的外在或者内在吸引。
+
+ 
+
+1️⃣外在吸引属于意识层面：
+
+我们渴望有个补偿型异性「理想型」，Ta来弥补我们对异性父母的不满。
+
+.
+
+2️⃣内核吸引属于潜意识层面：
+
+我们对熟悉的性格、行为模式会产生安全感，因为曾经经历过，所以觉得安全，哪怕是熟悉的痛苦，也会带给内心安全感。因为习惯性受苦也是一种熟悉。
+
+.
+
+3️⃣男女迷恋模式相同：
+
+一个男生最迷恋的类型内核会像他妈妈，而外在表现却跟他的妈妈截然相反。一个女生最迷恋的类型内核会像她爸爸，而外在表现却跟他的爸爸截然相反。
+
+.
+
+当意识层面和潜意识层面的双重需求被满足时，就会激发一个人的深度迷恋。例如周杰伦和昆凌：
+
+✔️周杰伦妈妈外在表现：独立刚强大女人
+
+✔️昆凌外在表现：小女人活出自我，明媚阳光，无忧无虑🔜特别吸引周董。
+
+✔️昆凌内在表现：作为女主人，相夫教子，贤惠持家，跟周董的妈妈很像。
+
+ 
+
+所以迷恋的动机大多是为了弥补对童年缺失完美父母的遗憾。而潜意识里最深刻的是被满足的缺失感和曾经熟悉的安全感。
+
+
+
+[【心理导图】掌握3个法则秒懂关系相处的秘诀！！] https://mp.weixin.qq.com/s/ME3YoEbaFG3vNny1ejmXgQ
+
+人之一生，其实最重要的事情就是处理各种关系。
+
+亲子关系，亲密关系，父母关系，领导关心，同事关系，朋友关系，闺蜜关系，同学关系……
+
+.
+
+关系和谐的人，普遍幸福感也会更强一些。
+
+同理，我们的痛苦和不幸即来源于不和谐的关系。
+
+.
+
+关系其实就隐藏着冲突，所以处理关系即处理冲突，
+
+在关系中，我们的内在人格会展现的淋漓尽致。
+
+.
+
+今天，我们一起学习三个维系关系的认知模型。
+
+❶刺猬🦔理论
+
+❷美即好效应
+
+❸韦奇定律
+
+
+
+434、(灵感来自周杰伦《七里香》歌词 把永远爱你写进诗的结尾 你是我唯一想要的了解)
 
 我的小说的最后一页如下：
 
@@ -13149,7 +13223,7 @@ https://mp.weixin.qq.com/s/TRGKhAYxc-eoL9Mymp9F3g
 
 logging  
 
-202512241832 创作者YJH 完成终极版
+202512242230 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
