--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -13678,7 +13678,15 @@ PS：段誉阶段
 
 
 
-435、(灵感来自周杰伦《七里香》歌词 把永远爱你写进诗的结尾 你是我唯一想要的了解)
+435、公众号利维坦文章 思考死亡是一种强大的工具
+
+https://mp.weixin.qq.com/s/8gcqqDH_SLHnwPbJmbTR6Q
+
+没关系，“我们都是性与死的孩子”（吕费耶语），终究会在宇宙中以粒子的形式再度相遇相见。
+
+
+
+436、(灵感来自周杰伦《七里香》歌词 把永远爱你写进诗的结尾 你是我唯一想要的了解)
 
 我的小说的最后一页如下：
 
@@ -13708,7 +13716,7 @@ PS：段誉阶段
 
 logging  
 
-202512271030 创作者YJH 完成终极版
+202512292142 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
