--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -13803,7 +13803,165 @@ https://music.163.com/song?id=4051045&uct2=U2FsdGVkX18nRIf5jHl7fwVXy4yNgH+Jv+IsP
 
 
 
-443、欧丽娟老师说：“生命交给我们，爱并非存在于相互的凝视，而是两个人一起望向外在的同一方向，看到这个世界的更宽广、更优美、更真理的那一面啊。所以人不要只守着彼此，你要晓得两个人的分量就是2/7000000000，你知道吗？哈，可是如果你望向外在的同一个方向，你可以拥有整个世界，拥有整个宇宙，好，所以这样一来，你就可以是一个好爸爸，好妈妈，好丈夫，好妻子，可是你可以也可以是一个很好的君子，懂吗？即便对你的敌人，你都可以有非常优雅宽阔的风范，这才是我们人要追求的哦。”
+443、- [爱情这件小事儿] https://mp.weixin.qq.com/s/sX0hsrEcxHZlxUEe2LymzQ
+
+via Maya Wang
+
+爱情这件小事儿
+
+原创 玛雅小姐 漪笔记 2016年8月26日 00:30
+
+文章摘要：因为工作不饱和。
+
+我经常接到闺蜜和非闺蜜读者的哭诉，主题只有一个事儿，就是那些小爱情。
+
+ 
+
+闺蜜A分手将近一年的时间里，那个前任的名字，还是在我耳边不断回响。人家已经结婚了好吗。终于明白，原来女孩子面对曾经有过交集，或者应该有一些交集的人结婚，是应该感觉酸酸的。
+
+ 
+
+而只有我，看见人家秀恩爱，往往只会更加笃定“那确实不是我想要的生活和爱情”，并且如果看见还能去点个赞……说实在的，那种恩爱简直没什么可羡慕的。
+
+ 
+
+理性，简直是一切惊慌失措的良药。
+
+ 
+
+最近越来越觉得，我们在职业发展里，往往鼓励情绪管理，甚至要求刻意去锻炼自己的情绪管理能力，当做一种优点。但其实，情绪管理好的极度冷静和理性的人，是很可怕的。比如那些连环杀手，应该都是情绪管理特别好的人吧。默默一个一个策划、准备、蛰伏、冷静地杀死曾经记恨的人，但又不会被心理问题所困扰的人类，简直自控到可怕。
+
+ 
+
+在心里杀死对一个人的念想，其实也差不多。刻意锻炼，是可以找到方式方法的。
+
+ 
+
+一、他值不值得爱
+
+ 
+
+廉价的真爱到底有没有吸引力，让人念念不忘呢？其实没有。
+
+ 
+
+他对你的好，只是一种程式化的公式，并不因你是你而有任何不同。他爱每一个女孩都是一个样子，快速表白快速示意快速献殷勤，展现出难以理解的痴情与妄想，百依百顺的迁就与甜蜜，到底有什么吸引力呢？
+
+ 
+
+好几年以后，还有人给我发我家大学院的照片，告诉我他路过我家门口。
+
+ 
+
+而他，那个时候早就已经有了新女友。
+
+ 
+
+请问这种“感情”，到底有什么价值呢？这也就是我不认识他女朋友罢了……
+
+
+
+二、他有没有什么特别
+
+ 
+
+很多时候，我会迷恋一个人本身的特质，而不是他对我好。
+
+ 
+
+对不起，对我好的人太多了。
+
+ 
+
+好不好，是会变的，而一个人的特质才最珍贵。很可惜，很多女孩子爱一个人，只看对方是不是对自己好。包括我妈妈，也是这么建议的。
+
+ 
+
+我很难理解自己会因为生活不能自理不会自疼自爱不会赚钱买想买的一切不会解决我想解决的问题，而爱上一个对我好的人。毕竟对我不好的人，我也不怎么认识，有可能已经被我埋在我家后花园了。
+
+ 
+
+好不好，完全取决于你值不值得对方对你好，在家躺着吃吃喝喝看看电视个人价值贬值以后，对方对你好不好，简直就是随缘外加看心情。有什么意义吗。
+
+
+
+三、差不多得了的，就差不多忘了吧
+
+ 
+
+也有一些人真的不是喜欢对方本身，真的是差不多凑活在一起，或者一时兴起，后面假戏真做，最后一拍两散。
+
+ 
+
+差不多得了的，真的就差不多忘了吧。
+
+ 
+
+既然随缘来，后面要死要活真的也没什么太大用。苛求缘分，就跟买彩票一直不中，就要死要活是一个道理，简直是自己闲的。可以做俩项目啊朋友，工作饱和，包治百病。
+
+  
+
+四、真心喜欢，就祝福他吧
+
+  
+
+要是真心喜欢的吧，会觉得高攀不起，快别耽误人家发展了……也真是心大。
+
+ 
+
+反正真心喜欢的人，也不会到要死要活的程度啊，真心想上的学校考不上还不是自己没本事，难道就要去死吗。找找差距多好啊，以后踏踏实实长点儿本事，别给人丢脸，回头想一下都觉得那是人生巅峰了。
+
+ 
+
+要知道，20岁配不上的人，40岁的时候超过他夫人也是很有面子的。
+
+ 
+
+所以健身跑步外教开公司做项目写文章环游世界，千万不能停，更加不能少。
+
+ 
+
+总而言之，真心喜欢，是应该获得福报的。
+
+ 
+
+比如，成为更好的自己。还有特别好的，40岁的自己。
+
+ 
+
+哎呀，好希望有天可以收购他们公司啊。（此处为幻觉请忽略）
+
+ 
+
+五、一切都是最好的安排
+
+ 
+
+当你为错失流星而哭泣，将会错过绚烂的日出。
+
+ 
+
+忘不了他，就立志收购他的公司，好吗？
+
+
+
+好的。
+
+
+
+爱他，就别秀恩爱，偷摸儿把他藏好，好吗？
+
+
+
+好的。
+
+
+
+我说完了。
+
+
+
+444、欧丽娟老师说：“生命交给我们，爱并非存在于相互的凝视，而是两个人一起望向外在的同一方向，看到这个世界的更宽广、更优美、更真理的那一面啊。所以人不要只守着彼此，你要晓得两个人的分量就是2/7000000000，你知道吗？哈，可是如果你望向外在的同一个方向，你可以拥有整个世界，拥有整个宇宙，好，所以这样一来，你就可以是一个好爸爸，好妈妈，好丈夫，好妻子，可是你可以也可以是一个很好的君子，懂吗？即便对你的敌人，你都可以有非常优雅宽阔的风范，这才是我们人要追求的哦。”
 
 生命赋予我们宝贵的时光，而爱并非仅仅存在于彼此深深的凝视之间，更是两个人共同注视外在世界的同一方向。欧丽娟的这段话如一束启迪之光，为我们描绘了一幅关于爱、生命和追求的哲学画卷。
 她告诉我们，爱是一种超越自我的境界，不是沉湎于相互的凝视，而是共同探寻外部世界的广袤、优美和真理。在这个过程中，我们发现人生的价值并非仅仅体现在彼此之间，而是在共同望向宽广世界的时候。
@@ -13820,7 +13978,7 @@ https://music.163.com/song?id=4051045&uct2=U2FsdGVkX18nRIf5jHl7fwVXy4yNgH+Jv+IsP
 
 
 
-444、《王维拟代失恋二首》
+445、《王维拟代失恋二首》
 （据其禅意山水诗风与盛唐气象拟作）
 
 **其一·示失恋男子**
@@ -13841,7 +13999,7 @@ https://music.163.com/song?id=4051045&uct2=U2FsdGVkX18nRIf5jHl7fwVXy4yNgH+Jv+IsP
 
 
 
-445、(灵感来自周杰伦《七里香》歌词 把永远爱你写进诗的结尾 你是我唯一想要的了解)
+446、(灵感来自周杰伦《七里香》歌词 把永远爱你写进诗的结尾 你是我唯一想要的了解)
 
 我的小说的最后一页如下：
 
@@ -13871,7 +14029,7 @@ https://music.163.com/song?id=4051045&uct2=U2FsdGVkX18nRIf5jHl7fwVXy4yNgH+Jv+IsP
 
 logging  
 
-202601062128 创作者YJH 完成终极版
+202601081437 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
