--- a/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
+++ b/content/post/2024-09-08-谈谈失恋这件小事（终极版）.md
@@ -13999,7 +13999,74 @@ via Maya Wang
 
 
 
-446、(灵感来自周杰伦《七里香》歌词 把永远爱你写进诗的结尾 你是我唯一想要的了解)
+446、- [看见自己心中的力量] https://mp.weixin.qq.com/s/o3-W_vsIjglKluk0BMdtbQ?click_id=90
+
+认识自我
+当我们扩展自己的思想和信念
+爱将自由流淌
+如果隐藏
+那将是自我封闭
+——露易丝·海
+
+
+
+心中的力量
+
+
+
+如果你能感受到自己身上越多的力量，就能拥有越自由的生命！
+
+你是谁？
+为什么会来到这个世界上？
+你对生命有何看法？
+
+
+
+……
+
+
+
+到现在为止，你所有的经历都来自过去的思想和信念。
+
+
+
+回顾过去，请不要觉得羞耻，请把它看做你丰富生命中的一部分，如果没有这些丰富的经历，就不会有今天的自己。你没有理由指责自己为什么不做得更好，因为你已经不能回到过去，你已经做得最好了，请用爱释放过去，感激它使你学会了很多东西。
+
+
+
+过去的事已经成为了记忆，怎样看待它取决于你自己。我们拥有的是现在，现在我们有感觉，现在我们在继续生活，今天我们所做的一切决定着明天。我们不能在明天做什么，也不能在昨天做什么，我们拥有的是今天，重要的是我们现在选择什么样的思想和信念，选择说什么样的话。
+
+
+
+当我们有意识地控制自己的思想和语言，就是找到了塑造生命的工具，我知道，这听起来似乎很简单，请记住：我们的力量就在此刻。你的心灵没有控制你，而是你控制着自己的心灵，更高的自我控制着你，明白这点很重要。
+
+
+
+你可以停止旧的思想，如果旧的思想又回来对你说："改变真难，"试图要从精神上控制你，请对自己说："我现在选择相信，对我来说，改变很容易，"请不断自我暗示这句话，让旧的思想知道你是主宰，你真的象自己所说的那样。
+
+
+
+请把你的思想想象成水滴，一个思想或一滴水显得很少，当你一遍又一遍地自我暗示某种思想时，你会发现，一开始，就象水滴把地毯弄湿了，后来变成一盆水、一个池塘、然后不断增多，变成一个湖，最后变成了汪洋大海，这是个什么样的大海呢？是不能游泳的臭水？还是清澈蔚蓝、让人看了就想跳下去畅游的大海？
+
+
+
+许多人总对我说："我不能停止思想"，我回答："可以，你能做到"，记得吗？你经常拒绝积极的思想，你只要告诉自己，你要停止消极的思想，我不是说让你和自己的思想做斗争，当消极的思想出现时，你只要对它说："感谢你的参与"，这不是拒绝，而是不把力量浪费在消极的思想上，告诉自己，你不再用消极的态度去思想，你要为自己建设新思想，不要和自己的思想做斗争，请认识并超越它们，不要沉迷于消极思想中，然后，你将会超越生命。
+
+
+
+……
+
+
+
+当我们学会了爱自己，并相信至高的力量，将变成用无限灵魂去建设爱的世界中的一员。我们对自己的爱使自己从受害者变成胜利者，我们对自己的爱将吸引到各种美好的经历。你注意到了吗？自我感觉良好的人往往很有吸引力，他们很优秀、能够享受生活，很轻易就能得到各种美好的事物。
+
+
+
+……
+
+
+
+447、(灵感来自周杰伦《七里香》歌词 把永远爱你写进诗的结尾 你是我唯一想要的了解)
 
 我的小说的最后一页如下：
 
@@ -14029,7 +14096,7 @@ via Maya Wang
 
 logging  
 
-202601081437 创作者YJH 完成终极版
+202601082108 创作者YJH 完成终极版
 
 202410242247 创作者YJH 再次修订
 
